# python-sdk

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILLS.md  context7.json  project.json  pyproject.toml
.github/workflows/: dispatch-upstream.yml  publish.yml
src/spekoai/: __init__.py  client.py  errors.py  models.py  realtime.py
