[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spekoai"
version = "0.0.1"
description = "Official SpekoAI Python SDK — Voice AI gateway client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "SpekoAI" }]
keywords = ["spekoai", "voice-ai", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "respx>=0.22",
]

[project.urls]
Homepage = "https://github.com/SpekoAI/python-sdk"
Repository = "https://github.com/SpekoAI/python-sdk"
Issues = "https://github.com/SpekoAI/python-sdk/issues"
Changelog = "https://github.com/SpekoAI/python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/spekoai"]

[tool.hatch.build.targets.sdist]
include = [
  "src/spekoai",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
