[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[project]
name = "spekoai"
version = "0.0.1"
description = "Official Speko Python SDK — one API, every voice provider"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "SpekoAI" }]
keywords = ["spekoai", "voice-ai", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/SpekoAI/python-sdk"
Repository = "https://github.com/SpekoAI/python-sdk"
Issues = "https://github.com/SpekoAI/python-sdk/issues"
Changelog = "https://github.com/SpekoAI/python-sdk/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "respx>=0.22",
]

[tool.uv.build-backend]
module-name = "spekoai"
module-root = "src"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
# UP045 wants `X | None` instead of `Optional[X]`. With target-version = py39
# and pydantic evaluating annotations at runtime, PEP 604 union syntax breaks
# on 3.9, so stay on `Optional[...]` until we drop 3.9 support.
ignore = ["UP045"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
